--- a/src/components/widgetLarge/widgetlg.css
+++ b/src/components/widgetLarge/widgetlg.css
@@ -1,3 +1,48 @@
-.widgetLg{
-    flex: 2;
+.widgetLg {
+  flex: 2;
+  box-shadow: 0 7px 30px -10px rgba(150, 170, 180, 0.5);
+  padding: 20px;
+}
+.widgetlgTitle {
+  font-size: 22px;
+  font-weight: 600;
+}
+.widgetlgTable {
+  width: 100%;
+  border-spacing: 20px;
+}
+.widgetlgTh {
+  text-align: left;
+}
+.widgetlgUser {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
+.widgetlgImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+.widgetlgDate, .widgetlgAmount{
+font-weight: 300;
+}
+.widgetlgButton {
+  padding: 5px 7px;
+  border-radius: 10px;
+  border: none;
+}
+.widgetlgButton.Approved {
+  background-color: #e5faf2;
+  color: #3bb077;
+}
+.widgetlgButton.Declined {
+  background-color: #fff0f1;
+  color: #d95087;
+}
+.widgetlgButton.Pending {
+  background-color: #ebf1fe;
+  color: #2a7ade;
 }
